--- a/portfolio.html
+++ b/portfolio.html
@@ -80,101 +80,216 @@
           </ul>
 
           <ul class="buttons-gallery">
+            
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/moc.webp"
                   alt="Техно-Кряк"
                 />
+                <div class="buttons-div1">
+                   <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Технокряк</h2>
                 <p class="buttons-p">Веб-Сайт</p>
               </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/nba.webp"
                   alt="NBA"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Постер New Orlean vs Golden Star</h2>
                 <p class="buttons-p">Дизайн</p>
               </div>
+            </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/seafood.webp"
                   alt="Seafood"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Ресторан Seafood</h2>
                 <p class="buttons-p">Додаток</p>
               </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/prime.webp"
                   alt="Prime"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Проєкт Prime</h2>
                 <p class="buttons-p">Маркетинг</p>
               </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/boxes.webp"
                   alt="Boxes"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Проєкт Boxes</h2>
                 <p class="buttons-p">Додаток</p>
               </div>
+              </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/mnn.webp"
                   alt="Inspiration has no Borders"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Inspiration has no Borders</h2>
                 <p class="buttons-p">Веб-Сайт</p>
               </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/gazeta.webp"
                   alt="Limited Edition"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2"> Виданя Limited Edition</h2>
                 <p class="buttons-p">Дизайн</p>
               </div>
             </li>
+
             <li class="buttons-item">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/projectlab.webp"
                   alt="LAB"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Проєкт LAB</h2>
                 <p class="buttons-p">Маркетинг</p>
               </div>
             </li>
+
             <li class="buttons-item">
-              
                 <img
                   class="buttons-photo"
                   src="./images.krakva/minemoney.webp"
                   alt="Growing Business"
                 />
+                <div class="buttons-div1">
+                  <p class="buttons-p1">
+                    Ресурс пропонує комплексні
+                    пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це 
+                    дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Growing Business</h2>
                 <p class="buttons-p">Додаток</p>
