--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- библия -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- стайли -->
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -81,7 +84,7 @@
 
           <ul class="buttons-gallery">
             
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-down-right">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
@@ -104,48 +107,47 @@
                 <p class="buttons-p">Веб-Сайт</p>
               </div>
             </li>
-
-            <li class="buttons-item">
+            
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-down">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/nba.webp"
-                  alt="NBA"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Постер New Orlean vs Golden Star</h2>
                 <p class="buttons-p">Дизайн</p>
               </div>
-            </div>
             </li>
-
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-down-left">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/seafood.webp"
-                  alt="Seafood"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
-                </div>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Ресторан Seafood</h2>
@@ -153,142 +155,140 @@
               </div>
             </li>
 
-            <li class="buttons-item">
+           <li class="buttons-item" data-aos-delay="300" data-aos="fade-right">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/prime.webp"
-                  alt="Prime"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
-                </div>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Проєкт Prime</h2>
                 <p class="buttons-p">Маркетинг</p>
               </div>
             </li>
-
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="flip-right">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/boxes.webp"
-                  alt="Boxes"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
-                </div>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Проєкт Boxes</h2>
                 <p class="buttons-p">Додаток</p>
               </div>
-              </div>
             </li>
 
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-left">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/mnn.webp"
-                  alt="Inspiration has no Borders"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
-                </div>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Inspiration has no Borders</h2>
                 <p class="buttons-p">Веб-Сайт</p>
-               </div>
+              </div>
             </li>
 
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-up-right">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/gazeta.webp"
-                  alt="Limited Edition"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
-                </div>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
-                <h2 class="buttons-h2"> Виданя Limited Edition</h2>
+                <h2 class="buttons-h2">Видання Limited Edition</h2>
                 <p class="buttons-p">Дизайн</p>
               </div>
             </li>
-
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-up">
               <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/projectlab.webp"
-                  alt="LAB"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
-                </div>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Проєкт LAB</h2>
                 <p class="buttons-p">Маркетинг</p>
               </div>
             </li>
-
-            <li class="buttons-item">
+            <li class="buttons-item" data-aos-delay="300" data-aos="fade-up-left">
+              <div class="buttons-div2">
                 <img
                   class="buttons-photo"
                   src="./images.krakva/minemoney.webp"
-                  alt="Growing Business"
+                  alt="Техно-Кряк"
                 />
                 <div class="buttons-div1">
-                  <p class="buttons-p1">
+                   <p class="buttons-p1">
                     Ресурс пропонує комплексні
                     пропозиції з різним рівнем
                     функціоналу та сервісів. Все це 
                     дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи
                     приватну особу.
-                  </p>
+                    </p>
+                  </div>
                 </div>
                 <div class="buttons-div">
                 <h2 class="buttons-h2">Growing Business</h2>
@@ -369,5 +369,9 @@
        <!-- розсилка -->
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
