--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- стулья (CSS) -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css"/>
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./style/main.min.css">
   </head>
   <body>
     <header class="header">
