--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     />
     <!-- стулья (CSS) -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css"/>
-    <link rel="stylesheet" href="./style/main.min.css">
+    <link rel="stylesheet" href="sass/main.css">
   </head>
   <body>
     <header class="header">
@@ -284,7 +283,7 @@
       </div>
       </section>
     </main>
-    <!--  секцыя номер 6  (^_^) -->
+    <!--  секція номер 6  (^_^) -->
       <section class="client">
         <div class="container">
         <h2 class="client-h2"> Постійні клієнти </h2>
